# jaqubsuite

./: CMakeLists.txt  README  README.md  jaqubsuite.desktop  jaqubsuite.kdev4  jaqubsuite.notifyrc
src/: JaqubSuiteui.rc  connection_chat_window.cpp  connection_chat_window.h  connection_chat_window.ui  connection_dialog.cpp  connection_dialog.h  connection_dialog.ui  connection_postal_window.cpp  connection_postal_window.h  connection_postal_window.ui  jaqubsuite.cpp  jaqubsuite.h  jaqubsuite.ui  main.cpp
